--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -1,8 +1,10 @@
+
 project:
   type: website
+  output-dir: docs # Quarto place les fichiers générés du site dans un dossier docs
 
 website:
-  title: "site"
+  title: "CycleVision3"
   navbar:
     left:
       - href: index.qmd
