--- a/docs/_quarto.yml
+++ b/docs/_quarto.yml
@@ -7,13 +7,19 @@ website:
   navbar:
     left:
       - href: index.qmd
-        text: Home
-      - about.qmd
-
-
+        text: Le vélo à Montpellier
+      - href: docu.qmd
+        text: Documentation
+      - href: auteurs.qmd
+        text: Auteurs
+    
+    right:
+      - icon: "images/logogithub.png"
+        url: "https://github.com/mscaia/PROJ_HAX712X"
+        
 format:
   html:
-    theme: cosmo
+    theme: united
     css: styles.css
     toc: true
 
