génération des HTML + modif gitignore

--- a/docs/_quarto.yml
+++ b/docs/_quarto.yml
@@ -7,7 +7,7 @@ website:
   navbar:
     left:
       - href: index.qmd
-        text: Le vélo à Montpellier
+        text: Le vélo à Montpellier.
       - href: docu.qmd
         text: Documentation
       - href: auteurs.qmd
