test ajout d'images

--- a/docs/_quarto.yml
+++ b/docs/_quarto.yml
@@ -1,6 +1,7 @@
 
 project:
   type: website
+  output-dir: .
 
 website:
   title: "CycleVision3"
@@ -19,7 +20,7 @@ website:
         
 format:
   html:
-    theme: united
+    #theme: united
     css: styles.css
     toc: true
 
