ajout menu déroulant

--- a/docs/_quarto.yml
+++ b/docs/_quarto.yml
@@ -9,11 +9,18 @@ website:
     left:
       - href: index.qmd
         text: Le vélo à Montpellier.
+      - text: Travaux  
+        menu:
+        - text: "Projet 1"
+          href: projet1.qmd
+        - text: "Projet 2"
+          href: projet2.qmd
+        - text: "Projet 3"
+          href: projet3.qmd 
       - href: docu.qmd
         text: Documentation
       - href: auteurs.qmd
-        text: Auteurs
-    
+        text: Auteurs   
     right:
       - icon: "images/logogithub.png"
         url: "https://github.com/mscaia/PROJ_HAX712X"
