--- a/docs/_quarto.yml
+++ b/docs/_quarto.yml
@@ -9,7 +9,7 @@ website:
     left:
       - href: index.qmd
         text: Le vélo à Montpellier.
-      - text: Travaux  
+      - text: Projets  
         menu:
         - text: "Projet 1"
           href: projet1.qmd
