--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-Osmnx : 1.9.4 
-Folium : 0.17.0
-networkx : 3.2.1
-Pandas : 1.4.4
-Numpy : 1.26.4
-Matplotlib : 3.9.2
-Seaborn : 0.13.2
-Cycler : 0.11.0
-Pooch : 1.8.2 
+osmnx==1.9.4 
+folium==0.17.0
+networkx==3.2.1
+pandas==1.4.4
+numpy==1.26.4
+matplotlib==3.9.2
+seaborn==0.13.2
+cycler==0.11.0
+pooch==1.8.2 
