--- a/docs/_quarto.yml
+++ b/docs/_quarto.yml
@@ -9,13 +9,13 @@ website:
     left:
       - href: index.qmd
         text: Le vélo à Montpellier.
-      - text: Projets  
+      - text: Travaux 
         menu:
-        - text: "Projet 1"
+        - text: "Analyse des données"
           href: projet1.qmd
-        - text: "Projet 2"
+        - text: "Cartes"
           href: projet2.qmd
-        - text: "Projet 3"
+        - text: "Vidéo"
           href: projet3.qmd 
       - href: docu.qmd
         text: Documentation
