suppression contenu inutile + ajout footer

--- a/docs/_quarto.yml
+++ b/docs/_quarto.yml
@@ -8,15 +8,15 @@ website:
   navbar:
     left:
       - href: index.qmd
-        text: Le vélo à Montpellier.
+        text: Le vélo à Montpellier
       - text: Travaux 
         menu:
-        - text: "Analyse des données"
-          href: projet1.qmd
-        - text: "Cartes"
-          href: projet2.qmd
-        - text: "Vidéo"
-          href: projet3.qmd 
+          - text: "Analyse des données"
+            href: projet1.qmd
+          - text: "Cartes"
+            href: projet2.qmd
+          - text: "Vidéo"
+            href: projet3.qmd 
       - href: docu.qmd
         text: Documentation
       - href: auteurs.qmd
@@ -24,12 +24,14 @@ website:
     right:
       - icon: "images/logogithub.png"
         url: "https://github.com/mscaia/PROJ_HAX712X"
-        
+
 format:
   html:
-    #theme: united
     css: styles.css
     toc: true
+    include-in-header: []
+    include-before-body: []
+    include-after-body: _footer.html
 
 execute:
   freeze: auto
