--- a/.github/workflows/update_and_deploy.yml
+++ b/.github/workflows/update_and_deploy.yml
@@ -33,7 +33,7 @@ jobs:
 
     # Étape 5 : Générer le site
     - name: Render site
-      run: quarto render
+      run: quarto render docs
 
     # Étape 6 : Déployer sur GitHub Pages avec l'action peaceiris
     - name: Deploy to GitHub Pages
