--- a/.github/workflows/update_and_deploy.yml
+++ b/.github/workflows/update_and_deploy.yml
@@ -8,6 +8,9 @@ on:
       - main
   workflow_dispatch:  # Permet de lancer manuellement le workflow
 
+permissions:
+  contents: write
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -35,9 +38,11 @@ jobs:
     - name: Render site
       run: quarto render docs
 
-    # Étape 6 : Déployer sur GitHub Pages avec l'action peaceiris
-    - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: docs
+    # Étape 6 : Commiter et pousser les fichiers générés
+    - name: Commit and Push Changes
+      run: |
+        git config --local user.name "github-actions[bot]"
+        git config --local user.email "github-actions[bot]@users.noreply.github.com"
+        git add docs/*
+        git commit -m "Auto update" || echo "Rien à commit"
+        git push origin main
