--- a/.github/workflows/update_and_deploy.yml
+++ b/.github/workflows/update_and_deploy.yml
@@ -2,7 +2,7 @@ name: Update and Deploy Site
 
 on:
   schedule:
-    - cron: "0 * * * *"
+    - cron: "0 0 * * *" #se déclenche tous les jours à minuit
   push:  # Déclencher le workflow lors d'un push
     branches:
       - main
