ajout logo navbar

--- a/docs/_quarto.yml
+++ b/docs/_quarto.yml
@@ -22,6 +22,10 @@ website:
       - href: auteurs.qmd
         text: Auteurs   
 
+    right:
+      - text: "<img src='https://upload.wikimedia.org/wikipedia/fr/thumb/f/f6/Logo_Velomagg%27.svg/266px-Logo_Velomagg%27.svg.png?20080201004526' alt='Bicycle Logo' style='height:30px; vertical-align:middle;'>"
+        href: https://www.tam-voyages.com/presentation/?rub_code=1&thm_id=6
+
 format:
   html:
     css: styles.css
