--- a/docs/shiny_app/requirements.txt
+++ b/docs/shiny_app/requirements.txt
@@ -1,13 +1,10 @@
 osmnx==1.9.4  
 folium==0.17.0
-networkx==3.2.1
 pandas==1.4.4
-numpy==1.26.4
-matplotlib==3.9.2
-seaborn==0.13.2
-cycler==0.11.0
 pooch==1.8.2
-plotly==5.15.0 
 kaleido==0.2.1
 shiny
+functools
+re 
+unicodedata
 scikit-learn
