--- a/docs/_quarto.yml
+++ b/docs/_quarto.yml
@@ -1,4 +1,3 @@
-
 project:
   type: website
   output-dir: .
@@ -15,7 +14,7 @@ website:
             href: projet1.qmd
           - text: "Cartes"
             href: projet2.qmd
-          - text: "Vidéo"
+          - text: "Vidéos"
             href: projet3.qmd 
       - href: docu.qmd
         text: Documentation
