--- a/.github/workflows/update_and_deploy.yml
+++ b/.github/workflows/update_and_deploy.yml
@@ -1,8 +1,8 @@
-name: Update and Deploy Site
+name: Update and Deploy Site # L'objectif de ce workflow est de déployer le site toutes les heures pour rafraîchir le contenu
 
 on:
   schedule:
-    - cron: "0 0 * * *" #se déclenche tous les jours à minuit
+    - cron: "0 0 * * *" # Se déclencher tous les jours à minuit
 
   workflow_dispatch:  # Permet de lancer manuellement le workflow
 
