--- a/docs/_quarto.yml
+++ b/docs/_quarto.yml
@@ -27,6 +27,12 @@ website:
 
 format:
   html:
+    theme: flatly
+    #theme: materia
+    #theme: morph
+    #theme: simplex
+    #theme: superhero
+    #theme: cyborg
     css: styles.css
     toc: true
     include-in-header: []
