--- a/docs/_quarto.yml
+++ b/docs/_quarto.yml
@@ -4,6 +4,7 @@ project:
 
 website:
   title: "CycleVision3"
+  favicon: favicon/favicon-32x32.png #https://www.flaticon.com/fr/icone-gratuite/velo-de-route_14886
   navbar:
     left:
       - href: index.qmd
@@ -27,10 +28,14 @@ website:
 
 format:
   html:
+    theme: flatly
+    #theme: materia
+    #theme: morph
+    #theme: simplex
+    #theme: superhero
+    #theme: cyborg
     css: styles.css
     toc: true
-    include-in-header: []
-    include-before-body: []
     include-after-body: _footer.html
 
 execute:
