--- a/docs/_quarto.yml
+++ b/docs/_quarto.yml
@@ -12,7 +12,7 @@ website:
       - text: Travaux 
         menu:
           - text: "Analyse des données"
-            href: projet1.qmd
+            href: analyse_donnees.qmd
           - text: "Cartes"
             href: projet2.qmd
           - text: "Vidéos"
