--- a/docs/_quarto.yml
+++ b/docs/_quarto.yml
@@ -16,7 +16,7 @@ website:
           - text: "Cartes"
             href: maps.qmd
           - text: "Vidéos"
-            href: projet3.qmd 
+            href: videos.qmd 
       - href: docu.qmd
         text: Documentation
       - href: auteurs.qmd
