--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -4,9 +4,16 @@ on:
   push:
     branches:
       - main  # Remplacez "main" par le nom de votre branche par défaut si nécessaire
+    paths:
+      - 'Cycle3/**'  # Inclure tous les fichiers dans Cycle3 et ses sous-dossiers
+      - 'tests/**'
+
   pull_request:
     branches:
       - main
+    paths:
+      - 'Cycle3/**'  # Inclure tous les fichiers dans Cycle3 et ses sous-dossiers
+      - 'tests/**'
 
 jobs:
   test:
