--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -14,6 +14,8 @@ on:
     paths:
       - 'Cycle3/**'  # Inclure tous les fichiers dans Cycle3 et ses sous-dossiers
       - 'tests/**'
+      
+  workflow_dispatch:  # Permet de lancer le workflow manuellement
 
 jobs:
   test:
