--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -38,7 +38,7 @@ jobs:
     - name: Run tests
       run: |
         # Exécuter les tests avec pytest et générer un rapport de couverture
-        pytest tests/ --cov=Cycle3 --cov-report=xml
+        pytest tests/ --cov=Cycle3 --cov-report=xml -s
 
     - name: Upload coverage to Codecov # Suivi des rapports
       uses: codecov/codecov-action@v3
